syntax = "proto3";

package pb;

import "barber/barbershop_service_categories.proto";

option go_package = "barbershop/src/pb/barber";


message ListBarberShopServiceCategoriesRequest{
    optional string barber_shop_chain_id = 1;
    optional string barber_shop_id = 2;
}

message ListBarberShopServiceCategoriesResponse{
    repeated BarberShopServiceCategories service_categories = 1;
}